[gd_scene load_steps=13 format=2]

[ext_resource path="res://GUI/block_UI_double@2x.png" type="Texture" id=1]
[ext_resource path="res://src/fonts/Armstrong.otf" type="DynamicFontData" id=2]
[ext_resource path="res://src/fonts/Hamberger-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Menus/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://src/fonts/Balbaleo.otf" type="DynamicFontData" id=5]
[ext_resource path="res://src/img/borders/fondo3.png" type="Texture" id=6]
[ext_resource path="res://GUI/Sudamerica.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 120
font_data = ExtResource( 3 )

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="fondo3" type="Sprite" parent="."]
visible = false
position = Vector2( 504.053, 322.229 )
scale = Vector2( 4.4933, 2.81566 )
texture = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 27.0
margin_bottom = 31.0
rect_scale = Vector2( 47.9099, 26.8897 )
color = Color( 0.933333, 0.737255, 0.0745098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sudamerica" type="Sprite" parent="."]
position = Vector2( 433.353, 467.423 )
scale = Vector2( 0.414802, 0.390833 )
texture = ExtResource( 7 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 900.0
margin_top = 250.0
margin_right = 1200.0
margin_bottom = 650.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="TextureButton" parent="VBoxContainer2"]
margin_right = 300.0
margin_bottom = 128.0
texture_normal = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer2/Play"]
margin_left = 30.2668
margin_top = 13.4695
margin_right = 230.267
margin_bottom = 126.47
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.27451, 0.184314, 0.0705882, 1 )
text = "Jugar"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Creditos" type="TextureButton" parent="VBoxContainer2"]
margin_top = 158.0
margin_right = 300.0
margin_bottom = 286.0
texture_normal = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer2/Creditos"]
margin_left = 15.0
margin_top = 11.8921
margin_right = 247.0
margin_bottom = 118.892
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.27451, 0.184314, 0.0705882, 1 )
text = "Créditos"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Salir" type="TextureButton" parent="VBoxContainer2"]
margin_top = 316.0
margin_right = 300.0
margin_bottom = 444.0
texture_normal = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer2/Salir"]
margin_left = 61.6489
margin_top = 14.2705
margin_right = 229.649
margin_bottom = 127.271
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.27451, 0.184314, 0.0705882, 1 )
text = "Salir"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo" type="Label" parent="."]
margin_left = 193.454
margin_top = 92.5403
margin_right = 1697.46
margin_bottom = 197.54
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 0.996078, 1 )
text = "Menú Principal"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logo" type="Label" parent="."]
margin_left = 36.5101
margin_top = 78.5913
margin_right = 541.51
margin_bottom = 199.591
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.168627, 0.388235, 0.0980392, 1 )
text = "GOPuzzle"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer2/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer2/Creditos" to="." method="_on_Creditos_pressed"]
[connection signal="pressed" from="VBoxContainer2/Creditos" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer2/Salir" to="." method="_on_Salir_pressed"]
